--- a/dashboard-table-grid.html
+++ b/dashboard-table-grid.html
@@ -1111,7 +1111,7 @@
 			2016 Copyright &copy; DP World. All rights reserved.
 		</footer>
 		
-    <script src="js/lib/jQuery/jquery-1.11.3.min.js"></script>
+    <script src="js/lib/jQuery/jquery-v2-1-1.min.js"></script> 
     <!-- Bootstrap Plugin Js -->
     <script src="js/lib/bootstrap/bootstrap.min.js"></script>
     <script src="js/lib/blockUI/jquery.blockUI.js"></script>
@@ -1123,7 +1123,6 @@
     <script src="js/initialize.js"></script>
     <script src="js/init/table-grid.js"></script>
     <script src="js/init/dashboard.js"></script>
-	
 	<script src="js/lib/owl-carousel/owl.carousel.min.js"></script>
 	
 	
