--- a/elements-new.html
+++ b/elements-new.html
@@ -151,6 +151,7 @@
                             <button class="uie-btn uie-btn-error" type="button">.uie-btn-error</button>
                             <button class="uie-btn uie-btn-warning" type="button">.uie-btn-warning</button>
                             <button class="uie-btn uie-btn-disable" type="button">.uie-btn-disable</button>
+							
 
                         </div>
                     </div>
@@ -166,7 +167,9 @@
                             <button class="uie-btn uie-btn-primary w-sm">Small</button>
                             <button class="uie-btn uie-btn-primary w-md">Middle</button>
                             <button class="uie-btn uie-btn-primary w-lg">Large</button>
-
+							<button class="uie-primary-button margin-5 uie-button uie-icon-btn" type="button"> <span class="btn-icon"><img src="img/icons/svg/filter-white.svg" alt="Filter" ></span>
+                                <div class="btn-value">Filter </div>
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -627,7 +630,7 @@
                         <div class="form-col-2">
 
                             <div class="col-md-6 no-padding p-r-5 error-msg-text">
-                                <div class="dropdown-list validate-details">
+                                <div class="dropdown-list success-info">
 
                                     <div class="selected-listitem">Click Me</div>
 
@@ -641,11 +644,11 @@
                                     </ul>
                                     <input type="hidden" name="search_category" class="dropdown-item" value="12" />
                                 </div>
-                                <span class="error-msg right-top">A message may be formatted to display </span>
+								<i class="error-info-icon success fa fa-check-circle"> </i>
                             </div>
                             <div class="col-md-6 no-padding p-r-5">
-                                <input type="text" class="text-box validate-details">
-                                <span class="error-msg left-bottom">A message may be formatted to display </span>
+                                <input type="text" class="text-box warning-info">
+                                <i class="error-info-icon warning fa fa-exclamation-circle"> </i>
                             </div>
 
                         </div>
@@ -960,7 +963,7 @@
         </section>
     </div>
 
-    <script src="js/lib/jQuery/jquery-1.11.3.min.js"></script>
+     <script src="js/lib/jQuery/jquery-v2-1-1.min.js"></script> 
     <script src="js/lib/blockUI/jquery.blockUI.js"></script>
     <script src="js/lib/language/jquery.i18n.properties.js"></script>
     <!-- custom scrollbar plugin -->
