--- a/elements.html
+++ b/elements.html
@@ -475,7 +475,7 @@
     </div>
     <link href="css/test.min.css">
     <link href="css/bootstrap-datetimepicker.min.css">
-    <script src="js/lib/jQuery/jquery-1.11.3.min.js"></script>
+     <script src="js/lib/jQuery/jquery-v2-1-1.min.js"></script> 
     <script src="js/lib/language/jquery.i18n.properties.js"></script>
     <!-- custom scrollbar plugin -->
     <script src="js/lib/scrollbar/jquery.mCustomScrollbar.concat.min.js"></script>
