--- a/form-element.html
+++ b/form-element.html
@@ -221,7 +221,7 @@
       <footer class="footer">
          2016 Copyright &copy; DP World. All rights reserved.
       </footer>
-      <script src="js/lib/jQuery/jquery-1.11.3.min.js"></script>
+       <script src="js/lib/jQuery/jquery-v2-1-1.min.js"></script> 
       <script src="js/lib/blockUI/jquery.blockUI.js"></script>
       <script src="js/lib/multifile/jQuery.MultiFile.min.js"></script>
       <script src="js/lib/language/jquery.i18n.properties.js"></script>
