--- a/grid.html
+++ b/grid.html
@@ -759,7 +759,7 @@
     </div>
 	</aside>
 	<div id="datatable_ajax"></div>
-    <script src="js/lib/jQuery/jquery-1.11.3.min.js"></script>
+    <script src="js/lib/jQuery/jquery-v2-1-1.min.js"></script> 
 	<!-- Bootstrap Plugin Js -->
 	<script src="js/lib/bootstrap/bootstrap.min.js"></script>
 	
