--- a/table-grid.html
+++ b/table-grid.html
@@ -39,7 +39,7 @@
                     <div class="panel-block-icon"><i class="fa fa-sticky-note"></i>
                     </div>
                     <div class="panel-block-heading "> Table Example</div>
-                    <div class="app-action-group">
+                    <div class="app-action-group app-action">
                         <a href="#"><i class="fa fa-print"></i></a>
                         <a href="#" class="active"><i class="fa fa-filter"></i></a>
                         <a href="#"><i class="fa fa-sort-amount-desc"></i></a>
@@ -952,7 +952,7 @@
             <!--End Panel-->
        
     </section>
-    <script src="js/lib/jQuery/jquery-1.11.3.min.js"></script>
+    <script src="js/lib/jQuery/jquery-v2-1-1.min.js"></script>
     <!-- Bootstrap Plugin Js -->
     <script src="js/lib/bootstrap/bootstrap.min.js"></script>
 
