commit code by Jhalak for sprint

--- a/form-element.html
+++ b/form-element.html
@@ -171,7 +171,7 @@
             <!--	 Panel Block-->
             <div class="panel-block">
                <!-- Panel Head -->
-               <div class="panel-block-head clearfix">
+               <!--<div class="panel-block-head clearfix">
                   <div class="panel-block-icon"><i class="fa fa-home"></i> </div>
                   <div class="panel-block-heading "> Add Container Inventory </div>
                   <div class="app-action-group">
@@ -181,7 +181,7 @@
                      <a href="#" class="range">Range</a>
                      <a href="#"><i class="fa fa-plus"></i></a>
                   </div>
-                  <!-- Mobile Action Area -->
+                  <!-- Mobile Action Area
                   <div class="mobile-action-grp-btn">
                      <div class="action-arrow open" ><a href="#"><i class="fa fa-caret-down"></i></a>
                      </div>
@@ -206,8 +206,8 @@
                         </div>
                      </div>
                   </div>
-                  <!--End  Mobile Action Area -->
-               </div>
+                  <!--End Mobile Action Area 
+               </div>-->
                <div class="panel-block-content no-padding">
                   <div class="col-md-12 " id="form-content">
                      <h2 class="panel-title"></h2>
@@ -233,6 +233,7 @@
       <script src="js/functions.js"></script>
       <script src="js/initialize.js"></script>
 	  <script src="template/elements.js"></script>
+	  <script src="js/lib/validation/validation.js"></script>
       <script src="js/general.js"></script>
       <script src="js/lib/form/dform.js"></script>
       <script src="js/init/elements.js"></script>
