--- a/elements-new.html
+++ b/elements-new.html
@@ -449,7 +449,7 @@
                 <div class="datepicker-row col-md-4">
                     <label class="label">Date:</label>
                     <div class="text-box-icon">
-                        <input type="text" id="datepicker" class="text-box"></input>
+                        <input type="text" id="datepicker" class="date-text-box"></input>
                         <span class="add-on">
 						<i class="fa fa-calendar-o"></i>
 						</span>
@@ -644,11 +644,11 @@
                                     </ul>
                                     <input type="hidden" name="search_category" class="dropdown-item" value="12" />
                                 </div>
-								<i class="error-info-icon success fa fa-check-circle"> </i>
+								<i class="error-info-ico success fa fa-check-circle"> </i>
                             </div>
                             <div class="col-md-6 no-padding p-r-5">
                                 <input type="text" class="text-box warning-info">
-                                <i class="error-info-icon warning fa fa-exclamation-circle"> </i>
+                                <i class="error-info-ico warning fa fa-exclamation-circle"> </i>
                             </div>
 
                         </div>
