New design Implement on dashboard

--- a/table-grid.html
+++ b/table-grid.html
@@ -333,51 +333,61 @@
                                         <span>+</span>
                                     </th>
                                     <th>
-                                        <span>Cal </span>
-                                        <span class="sorting sortable">
-									<a href="#" class="asc"><i class="fa fa-caret-up"></i></a>
-									<a href="#" class="desc"><i class="fa fa-caret-down"></i></a>
+									<span class="table-title">Container Cycle
+										<span class="sort-icon">
+										<span class="asc"><i class="fa fa-caret-up"></i></span>
+										<span class="sorting-order">2</span>
+										<span class="desc"><i class="fa fa-caret-down"></i></span>
+										</span>
 									</span>
                                     </th>
-                                    <th><span>Vessel Name</span>
-                                        <span class="sorting sortable">
-									<a href="#" class="asc"><i class="fa fa-caret-up"></i></a>
-									<p class="sorting-order">4</p>
-									<a href="#"  class="desc"><i class="fa fa-caret-down"></i></a>
-								</span>
+                                    <th>
+                                        <span class="table-title">Vessel Name
+										<span class="sort-icon">
+										<span class="asc disable"><i class="fa fa-caret-up"></i></span>
+										<span class="sorting-order">2</span>
+										<span class="desc"><i class="fa fa-caret-down"></i></span>
+										</span>
                                     </th>
-                                    <th><span>Type</span>
-                                        <span class="sorting">
-									<a href="#" class="asc disable"><i class="fa fa-caret-up"></i></a>
-									<p class="sorting-order">4</p>
-									<a href="#"  class="desc"><i class="fa fa-caret-down"></i></a>
-								</span>
+                                    <th>
+                                         <span class="table-title">Type
+										<span class="sort-icon">
+										<span class="asc"><i class="fa fa-caret-up"></i></span>
+										<span class="sorting-order">2</span>
+										<span class="desc disable"><i class="fa fa-caret-down"></i></span>
+										</span>
                                     </th>
-                                    <th><span>Class</span>
-                                        <span class="sorting">
-									<a href="#" class="asc"><i class="fa fa-caret-up"></i></a>
-									<p class="sorting-order">4</p>
-									<a href="#" class="desc disable"><i class="fa fa-caret-down"></i></a>
-								</span>
+                                    <th>
+                                        <span class="table-title">Class
+										<span class="sort-icon">
+										<span class="asc"><i class="fa fa-caret-up"></i></span>
+										<span class="sorting-order">2</span>
+										<span class="desc"><i class="fa fa-caret-down"></i></span>
+										</span>
                                     </th>
-                                    <th><span>Opr</span>
-                                        <span class="sorting">
-									<a href="#" class="asc"><i class="fa fa-caret-up"></i></a>
-								
-									<a href="#" class="desc"><i class="fa fa-caret-down"></i></a>
-								</span>
+                                    <th>
+                                        <span class="table-title">Opr
+										<span class="sort-icon">
+										<span class="asc"><i class="fa fa-caret-up"></i></span>
+										<span class="sorting-order">2</span>
+										<span class="desc"><i class="fa fa-caret-down"></i></span>
+										</span>
                                     </th>
-                                    <th><span>Lioyds</span>
-                                        <span class="sorting">
-									<a href="#" class="asc disable"><i class="fa fa-caret-up"></i></a>
-								    <a href="#"  class="desc"><i class="fa fa-caret-down"></i></a>
-								</span>
+                                    <th>
+                                        <span class="table-title">Lioyds
+										<span class="sort-icon">
+										<span class="asc"><i class="fa fa-caret-up"></i></span>
+										
+										<span class="desc"><i class="fa fa-caret-down"></i></span>
+										</span>
                                     </th>
-                                    <th><span>Call Sign</span>
-                                        <span class="sorting">
-									<a href="#" class="asc"><i class="fa fa-caret-up"></i></a>
-								    <a href="#"  class="desc disable"><i class="fa fa-caret-down"></i></a>
-								</span>
+                                    <th>
+                                        <span class="table-title">Call Sign
+										<span class="sort-icon">
+										<span class="asc"><i class="fa fa-caret-up"></i></span>
+										<span class="sorting-order">2</span>
+										<span class="desc"><i class="fa fa-caret-down"></i></span>
+										</span>
                                     </th>
                                     <th><span>Length(m)</span>
                                     </th>
