--- a/dashboard.html
+++ b/dashboard.html
@@ -79,8 +79,14 @@
                             </div>
                         </div>
                     </div>
+					<div class="mobile-search  pull-right">
+					<a href="#"><img src="img/icons/search.svg" alt="Search"></a>
+					</div>
                 </div>
             </div>
+			 <div class="search mobile-search">
+        <input type="text" value="" name="service_code" class="text-box" placeholder="Search">
+    </div>
         </section>
         <section class="menu-part clearfix">
 
@@ -144,9 +150,7 @@
 
             </div>
         </section>
-		 <div class="search mobile-search">
-        <input type="text" value="" name="service_code" class="text-box" placeholder="Search">
-    </div>
+		
 	</header>
 	
 	<!-- End Header -->
