--- a/table-grid.html
+++ b/table-grid.html
@@ -178,7 +178,7 @@
                     <div class="pagination-block clearfix">
                         <div class="pages-info">
                             <div class="page-options">
-                                <span>Page</span> <a href="#" class="disable"><i class="fa fa-chevron-left"></i></a>
+                                <span>Page</span> <a href="#" class="disable"><img src="img/icons/arrow-left.svg" alt="prvious"></a>
 
                                 <div class="dropdown-list">
                                     <div class="selected-listitem">11</div>
@@ -192,7 +192,7 @@
                                     </ul>
                                 </div>
 
-                                <a href="#"><i class="fa fa-chevron-right"></i></a>
+                                <a href="#"><img src="img/icons/arrow-right.svg" alt="prvious"></a>
                                 <span>of 260 </span>
                             </div>
                             <div class="page-record-options">
@@ -915,7 +915,7 @@
                    <div class="pagination-block clearfix bottom-pagination">
                         <div class="pages-info">
                             <div class="page-options">
-                                <span>Page</span> <a href="#"><i class="fa fa-chevron-left"></i></a>
+                                <span>Page</span> <a href="#"><img src="img/icons/arrow-left.svg" alt="prvious"></a>
                                 <div class="dropdown-list">
                                     <div class="selected-listitem">11</div>
                                     <ul>
@@ -928,7 +928,7 @@
                                     </ul>
                                 </div>
 
-                                <a href="#"><i class="fa fa-chevron-right"></i></a>
+                                <a href="#"><img src="img/icons/arrow-right.svg" alt="prvious"></a>
                                 <span>of 260 </span>
                             </div>
                             <div class="page-record-options">
