--- a/rule-mgmt.html
+++ b/rule-mgmt.html
@@ -89,7 +89,7 @@
                 <nav class="navbar navbar-default">
                     <div>
                         <div class="logo-fix-width">
-                            <a href="index.html"><img src="img/logo.png">
+                            <a href="index.html"><img src="img/logo.svg">
                             </a>
                         </div>
 
