--- a/dashboard.html
+++ b/dashboard.html
@@ -142,7 +142,7 @@
     <section class="clearfix">
         <!-- Sidebar -->
         <aside class="left-panel desktop-sidebar">
-            <ul>
+            <div class="sidebar-nav">
                 <li class="container-vgm-mgmt"><a data-tooltip="Container VGM Mgmt" href="javascript:void(0);" class="tab_action tooltip-right" id="container-vgm-mgmt">Container VGM Mgmt</a>
                 </li>
                 <li class="upload-edi"><a href="javascript:void(0);" class="tooltip-right tab_action" id="upload-edi" data-tooltip="Upload EDI">Upload EDI</a>
@@ -157,7 +157,7 @@
                 </li>
                 <li class="configuration"><a href="javascript:void(0);" class="tooltip-right tab_action" id="configuration" data-tooltip="Configuration & Settings">Configuration & Settings</a>
                 </li>
-            </ul>
+            </div>
         </aside>
         <!-- Sidebar For Mobile -->
         <aside class="left-panel mobile-sidebarmenu">
